--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -33,7 +33,7 @@
   }
   
   .navbar {
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     padding: 0.5rem 1rem;
   }
   
@@ -64,35 +64,51 @@
 }
 
 .nav-item {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  border-radius: 50px; 
+  padding: 0.2rem; 
+  transition: border-color 0.3s ease;
+}
+.profile {
+  display: flex;
+  align-items: center;
+  padding: 0.2rem; 
+  transition: border-color 0.3s ease;
 }
 
 .nav-item .nav-links {
-    color: white;
-    font-size: 1rem;
-    font-weight: 500;
-    padding: 0.5rem 1rem; 
-    transition: transform 0.3s ease;
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
+  display: flex;
+  align-items: center; 
+  justify-content: center;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  transition: transform 0.3s ease;
 }
 
 .nav-item .nav-links:hover {
    transform: scale(1.1);
 
 }
-  .profile-picture {
-    width: 40px; 
-    height: 40px; 
-    border-radius: 50%; 
-    object-fit: cover; 
-  }
+
+.nav-item .profile-picture {
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  margin-left: 10px;
+}
   
+.nav-item .user-name {
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+}
 
   footer {
-    background-color: var(--primary-color);
+    background-color: transparent;
     padding: 40px 0;
     color: white;
     z-index: 1000;
@@ -100,13 +116,13 @@
   
   .footer-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 30px;
-    padding: 0 50px;
+    grid-template-columns: 3fr 1fr 1fr 1fr 1fr; 
+    gap: 3rem;
+    padding: 0 20px;
   }
   
   .footer-about {
-    max-width: 250px;
+    font-size: 3.2rem;
   }
   
   .footer-logo {
@@ -115,30 +131,30 @@
   }
   
   .footer-about p {
-    font-size: 0.9rem;
-    line-height: 1.4;
+    font-size: 1rem;
+    line-height: 1.6;
   }
   
-  .footer-games ul {
+  .footer-list ul {
     list-style: none;
-    padding: 0;
+    margin-bottom: 1.5rem;
   }
   
-  .footer-games ul li {
+  .footer-list ul li {
     margin-bottom: 8px;
   }
   
-  .footer-games ul li a {
+  .footer-list ul li a {
     color: white;
     text-decoration: none;
   }
   
-  .footer-games ul li a:hover {
+  .footer-list ul li a:hover {
     text-decoration: underline;
   }
   
   .footer-social h4,
-  .footer-games h4,
+  .footer-list h4,
   .footer-payment h4 {
     margin-bottom: 10px;
     font-size: 1.2rem;
@@ -162,7 +178,7 @@
     text-align: center;
     padding: 20px;
     background-color: var(--primary-color);
-    border-top: 1px solid var(--secondary-color);
+    border-top: 3px solid var(--secondary-color);
   }
   
   .footer-bottom p {
@@ -182,26 +198,39 @@
     }
   
     .product {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       gap: 1.5rem;
     }
   
     .footer-container {
-      grid-template-columns: repeat(3, 1fr);
-      padding: 0 20px;
-    }
+    grid-template-columns: 1fr 1fr; 
+  }
+
+  .footer-about {
+    grid-column: span 2; 
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .footer-payment, .footer-social {
+    text-align: center;
+  }
+
   }
   
   @media screen and (max-width: 480px) {
   
     .footer-container {
-      grid-template-columns: 1fr;
-      padding: 0 10px;
+      grid-template-columns: 1fr; 
     }
   
-    .footer-about,
-    .footer-games,
-    .footer-payment {
+    .footer-about {
       text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .footer-list, .footer-payment, .footer-social {
+      text-align: center;
+      margin-bottom: 20px;
     }
   }
