--- a/css/topup.css
+++ b/css/topup.css
@@ -15,21 +15,24 @@
   color: var(--third-color);
 }
 
+
 .user-id-box,
 .membership-options,
 .diamond-options,
 .payment-options {
   margin: 2rem auto;
   max-width: 600px;
-  background-color: var(--primary-color);
+  background: transparent;
   padding: 20px;
   border-radius: 10px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(15px);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
 }
 
 .id {
-  display: block;
+  width: 40%;
   margin: 10px auto;
-  width: 80%;
   padding: 10px;
   border-radius: 5px;
   border: none;
@@ -72,6 +75,11 @@
   margin: 2rem auto;
 }
 
+.order{
+  display: flex;
+ justify-content: center;
+}
+
 .promo-box input,
 .whatsapp-box input {
   width: 100%;
@@ -82,14 +90,17 @@
 
 .order-btn {
   display: block;
-  margin: 20px auto;
-  padding: 15px 30px;
-  background-color: var(--secondary-color);
+  width: 320px;
+  height: 45px;
+  background: #fff;
   border: none;
-  border-radius: 5px;
-  color: white;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-size: 16px;
+  color: #333;
+  font-weight: 600;
 }
 
 .order-btn:hover {
